--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,7 @@
 // endbower
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  background-color: #000;
+  background-color: #111;
 }
 .show-lg {
   display: none;
@@ -14,7 +14,7 @@ video#bgvid {
   display: none;
   @media screen and (min-width: 35em) {
     display: block;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     min-width: 100%;
@@ -91,4 +91,19 @@ video#bgvid {
   @media screen and (min-width: 35em) {
     margin: 25px 10px;
   }
+}
+.fullpage {
+  height: 100vh;
+}
+.box {
+  padding: 25px;
+}
+section {
+  background-color: #eee;
+}
+.map-bg {
+  height: 350px;
+  background-image: url('../images/map.png');
+  background-size: contain;
+  background-repeat: no-repeat;
 }
