--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -113,6 +113,9 @@ video#bgvid {
     color: $techhub;
   }
 }
+.title.title-section {
+  margin-bottom: 40px;
+}
 // we help startups grow better, faster
 .columns.columns-minimal-border {
   margin: 0 5px;
@@ -140,25 +143,26 @@ video#bgvid {
     padding: 20px;
     .title {
       color: #fff;
-      font-size: 1.5em;
+      font-size: 1.6em;
       margin-bottom: 10px;
     }
   }
 }
 // membership
-.message-header-membership {
-  background: #69707a;
-  border-radius: 3px 3px 0 0;
-  color: white;
-  font-size: 1.2em;
-  font-weight: bold;
-  letter-spacing: 1px;
-  padding: 12px 8px;
-  text-transform: uppercase;
+.message.message-membership {
+  .message-header {
+    font-size: 1.1em;
+    font-weight: bold;
+    padding: 8px 6px;
+    text-transform: uppercase;
+  }
+  .message-body {
+    color: #555;
+  }
 }
 // newsletter
 .hero.is-primary.is-bold {
-  background-image: linear-gradient(141deg, #333 0%, $techhub 71%, $techhub 100%);
+  background-image: linear-gradient(141deg, #111 0%, #444 61%, #222 100%);
 }
 // stats
 .navbar.navbar-stats .heading {
@@ -179,13 +183,20 @@ video#bgvid {
     }
   }
 }
+.footer a:not(.icon) {
+  border: 0;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  font-weight: bold;
+  text-decoration: none;
+}
 .small-padding-bottom {
   padding-bottom: 20px;
 }
 .section {
   background-color: #eee;
   &.is-paddingless {
-    padding:5px 0;
+    padding: 5px 0;
   }
 }
 .map-bg {
