--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@ $techhub: #f9b233;
 @import "../../bower_components/bulma/bulma/utilities/utilities";
 @import "../../bower_components/bulma/bulma/config/variables";
 $primary: #f9b233;
+$radius: 0;
 @import "../../bower_components/bulma/bulma/config/generated-variables";
 @import "../../bower_components/bulma/bulma/base/base";
 @import "../../bower_components/bulma/bulma/elements/elements";
@@ -48,6 +49,10 @@ body {
     &:hover {
       background: darken($techhub, 10);
     }
+  }
+  .button.is-transparent {
+    background-color: transparent;
+    border-radius: 0;
   }
 }
 .header .container-header {
@@ -114,13 +119,13 @@ video#bgvid {
   }
 }
 .title.title-section {
-  margin-bottom: 40px;
+  margin-bottom: 25px;
 }
 // we help startups grow better, faster
 .columns.columns-minimal-border {
-  margin: 0 5px;
+  margin: 0 10px;
   .column:not(:last-child) {
-    margin-right: 5px;
+    margin-right: 10px;
   }
 }
 .full-bg {
@@ -151,7 +156,7 @@ video#bgvid {
 // alumni & members
 .carousel.carousel-members {
   .card {
-    margin: 30px;
+    margin: 0px 30px;
   }
   .image {
     height: 64px;
@@ -210,12 +215,16 @@ video#bgvid {
   text-decoration: none;
 }
 .small-padding-bottom {
-  padding-bottom: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .section {
   background-color: #eee;
   &.is-paddingless {
-    padding: 5px 0;
+    padding: 10px 0;
+  }
+  &.small-padding {
+    padding: 25px 0;
   }
 }
 .map-bg {
