--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,10 @@ $radius: 0;
 @import "../../bower_components/bulma/bulma/elements/elements";
 @import "../../bower_components/bulma/bulma/components/components";
 @import "../../bower_components/bulma/bulma/layout/layout";
+// slick carousel
+@import "../../bower_components/slick-carousel/slick/slick.scss";
+$slick-font-path: "../fonts/" !default;
+@import "../../bower_components/slick-carousel/slick/slick-theme.scss";
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -63,7 +67,7 @@ body {
   max-width: 100%;
   margin-right: 20px;
 }
-video#bgvid {
+.covervid-wrapper {
   display: none;
   @media screen and (min-width: 35em) {
     display: block;
@@ -73,7 +77,7 @@ video#bgvid {
     min-width: 100%;
     min-height: 100%;
     width: auto;
-    height: auto;
+    height: 100vh;
     z-index: 1;
     transform: translateX(-50%) translateY(-50%);
     background: url("bg.jpg") no-repeat;
@@ -102,11 +106,10 @@ video#bgvid {
   }
 }
 .is-home-cta {
-  background-color: #f7af3f;
+  background-color: $techhub;
   border-radius: 0;
   border: 0;
-  font-size: 120%;
-  font-weight: bold;
+  font-weight: 500;
   text-transform: uppercase;
   @media screen and (min-width: 35em) {
     margin: 20px 10px;
@@ -134,18 +137,34 @@ video#bgvid {
   min-height: 350px;
   background-repeat: no-repeat;
   background-size: cover;
-  &.full-bg-1 {
-    background-image: url('https://d38pst8wrxen9j.cloudfront.net/2015/Sep/IMG_7711_2-1442574675798.jpg');
+  &.full-bg-global-community {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)),url('https://d38pst8wrxen9j.cloudfront.net/2015/Sep/IMG_7711_2-1442574675798.jpg');
   }
-  &.full-bg-2 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('https://d38pst8wrxen9j.cloudfront.net/2016/Feb/DSC_0837-1454933480847.jpg');
+  &.full-bg-flex-space {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url('https://d38pst8wrxen9j.cloudfront.net/2016/Feb/DSC_0837-1454933480847.jpg');
+    background-position: center;
+  }
+  &.full-bg-events {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .2), rgba(0, 0, 0, 0.8)), url('../images/bg_events.jpg');
+    background-position: center;
+  }
+  &.full-bg-flex {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, .3), rgba(0, 0, 0, 0.95)), url('../images/bg_flex.jpg');
+    background-position: center;
+  }
+  &.full-bg-resident {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, .3), rgba(0, 0, 0, 0.95)), url('../images/bg_resident.jpg');
+    background-position: center;
+  }
+  &.full-bg-team {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, .3), rgba(0, 0, 0, 0.95)), url('../images/bg_team.jpg');
     background-position: center;
   }
   .full-bg-text {
     position: absolute;
     bottom: 10px;
     left: 0;
-    padding: 20px;
+    padding: 10px 20px;
     .title {
       color: #fff;
       font-size: 1.6em;
@@ -156,16 +175,16 @@ video#bgvid {
 // alumni & members
 .carousel.carousel-members {
   .card {
-    margin: 0px 30px;
+    margin: 1px 30px;
   }
   .image {
     height: 64px;
   }
 }
-.slick-prev:before, .slick-next:before {
-    color: #333;
+.slick-prev:before,
+.slick-next:before {
+  color: #333;
 }
-
 // membership
 .message.message-membership {
   .message-header {
@@ -205,7 +224,7 @@ video#bgvid {
   border-bottom: none;
 }
 .footer .columns {
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 .footer a:not(.icon) {
   border: 0;
