--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,6 +31,10 @@ body {
     padding-bottom: 5px;
   }
 }
+.hero.is-fullheight.hero-home{
+  background-color: #000;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, .9)),url('../images/bg_mobile.jpg');
+}
 .subtitle-home {
   color: #fff;
   font-size: 1.4em;
@@ -47,6 +51,8 @@ body {
 .header-item.is-dark-bg {
   & a {
     color: #fff;
+    font-weight: 500;
+    text-transform: uppercase;
     &:hover {
       color: $techhub;
     }
@@ -86,7 +92,6 @@ body {
     height: 100vh;
     z-index: 1;
     transform: translateX(-50%) translateY(-50%);
-    background: url("bg_fallback.jpg") no-repeat;
     background-size: cover;
   }
 }
@@ -106,6 +111,10 @@ body {
   }
   .logo-gfe {
     max-width: 289px;
+    margin-bottom: 10px;
+    @media screen and (min-width: 35em) {
+      margin-bottom: 0;
+    }
   }
   a {
     padding: 0;
