burger icon fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -57,10 +57,21 @@ body {
   z-index: 2;
 }
 .header-toggle {
+  position: fixed;
+  top: 5px;
+  right: 15px;
   margin-top: 10px;
-  border: 2px solid #555;
+  border: 2px solid #333;
   width: 45px;
   height: 45px;
+  background: $techhub;
+  &:hover{
+    background: darken($techhub, 5%);;
+  }
+  span {
+    background: #333;
+    height: 2px;
+  }
 }
 .header-item.is-dark-bg {
   & a {
