--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -133,32 +133,6 @@ body {
     margin-bottom: 20px;
   }
 }
-.wrapper-gfe {
-  color: #fff;
-  position: relative;;
-  bottom: 75px;
-  @media screen and (min-width: 35em) {
-    margin-bottom: 0;
-    bottom: 0;
-  }
-  .text-gfe {
-    text-transform: uppercase;
-    text-align: center;
-    color: #fff;
-    font-weight: 300;
-    font-size: 0.85em;
-    margin-bottom: 3px;
-  }
-  .logo-gfe {
-    max-width: 289px;
-    @media screen and (min-width: 35em) {
-      margin-bottom: 0;
-    }
-  }
-  a {
-    padding: 0;
-  }
-}
 .is-home-cta {
   background-color: $techhub;
   border-radius: 0;
@@ -170,10 +144,15 @@ body {
     margin: 20px 10px;
   }
 }
-.tabs.tabs-home a {
-  color: #fff;
-  &:hover {
-    color: $techhub;
+.tabs.tabs-home {
+  margin-top: 5px;
+  a {
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.15em;
+    &:hover {
+      color: $techhub;
+    }
   }
 }
 .title.title-section {
@@ -202,8 +181,10 @@ body {
   min-height: 350px;
   background-repeat: no-repeat;
   background-size: cover;
-  cursor: pointer;
-  &:hover {
+  &.hover {
+    cursor: pointer;
+  }
+  &.hover:hover {
     h3.title {
       color: $techhub;
     }
