--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -164,7 +164,7 @@ body {
   .column {
     margin-bottom: 10px;
   }
-  @media screen and (min-width: 35em) {
+  @media screen and (min-width: 992px) {
     margin: 0 10px;
     .column {
       margin-bottom: 0;
@@ -191,7 +191,7 @@ body {
   }
   &.full-bg-global-community {
     background-image: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),url('../images/map2.png');
-    background-position: center;
+    background-position: top;
   }
   &.full-bg-flex-space {
     background-image: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, .35), rgba(0, 0, 0, 0.9)), url('../images/bg_space.jpg');
@@ -203,7 +203,7 @@ body {
   }
   &.full-bg-flex {
     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, .3), rgba(0, 0, 0, 0.95)), url('../images/bg_flex3.jpg');
-    background-position: center;
+    background-position: top;
   }
   &.full-bg-resident {
     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, .3), rgba(0, 0, 0, 0.95)), url('../images/bg_resident3.jpg');
@@ -246,14 +246,14 @@ body {
   .slick-prev {
     z-index: 1;
     left: 3px;
-    @media screen and (min-width: 35em) {
-      left: -25px;
+    @media screen and (min-width: 992px) {
+      left: -10px;
     }
   }
   .slick-next {
     right: 3px;
-    @media screen and (min-width: 35em) {
-      right: -25px;
+    @media screen and (min-width: 992px) {
+      right: -10px;
     }
   }
 }
