--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -445,3 +445,51 @@ body {
 .modal-close-left {
   left: 20px;
 }
+
+.bubble 
+{
+position: relative;
+width: 300px;
+height: 220px;
+padding: 0px;
+background: rgba(255, 255, 255, .8);
+-webkit-border-radius: 15px;
+-moz-border-radius: 15px;
+border-radius: 15px;
+}
+
+.bubble:after 
+{
+content: '';
+position: absolute;
+border-style: solid;
+border-width: 15px 15px 15px 0;
+border-color: transparent rgba(255, 255, 255, .8);
+display: block;
+width: 0;
+z-index: 1;
+left: -15px;
+top: 95px;
+}
+
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.fadeInLeft {
+  animation-name: fadeInLeft;
+}
